--- a/jitpack.gradle
+++ b/jitpack.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.github.dcendents.android-maven'
+//apply plugin: 'com.github.dcendents.android-maven'
 
 group = 'com.github.licheedev'
 version = '1.0'
@@ -15,8 +15,8 @@ task sourcesJar(type: Jar) {
 task javadoc(type: Javadoc) {
     failOnError false
     source = android.sourceSets.main.java.sourceFiles
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-    classpath += configurations.compile
+    /*classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    classpath += configurations.compile*/
 }
 
 
